src/test/resources/de/monticore/umlcd4a/cocos/mcg/valid/C4A52.cd
package de.monticore.umlcd4a.cocos.mcg.valid;

classdiagram C4A52 {
  class A {
    String b;
    private String c;
    static String d;
  }

  interface I {
    static String a;
  }
}
