src/test/resources/de/monticore/umlcd4a/cocos/mcg/invalid/CD4AC2002.cd
package de.monticore.umlcd4a.cocos.mcg.invalid;

classdiagram CD4AC2002 {
  class A {
    abstract String a;
    private abstract String b;
    static abstract String c;
  }

  interface I {
    static abstract String d;
  }
}